--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="color_primary_dark">#E4453A</color>
+    <color name="color_primary">#FF6398</color>
+    <color name="color_accent">#FFC46C</color>
+    <color name="color_transparent">#19000000</color>
+
+    <color name="white">#FFFFFFFF</color>
+    <color name="loader_start">#FF2B1B</color>
+    <color name="loader_end">#A6F6CBE1</color>
+    <color name="loader_mid">#FF0059</color>
+    <color name="transparent30">#00838383</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="mid_black">#A9000000</color>
+
 </resources>
